// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid Debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
    Tanjirou
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en GifGrid Debe de mostrar items cuando se cargan imágenes useFetchGifs (Custom HOOK) 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
    Tanjirou
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="YTR"
      key="YTR"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.png"
    />
    <GifGridItem
      id="Msdiofj"
      key="Msdiofj"
      title="Cualquier otra cosa"
      url="https://localhost/otra/cosa.png"
    />
  </div>
</Fragment>
`;
